# py-template

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: build.yml  lint.yml
src/py_template/: __init__.py
