[project]
name = "py-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guy Avital", email = "guyavital10@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sample-template",
]

[tool.uv.workspace]
members = [
    "packages/sample-template",
]

[tool.uv.sources]
sample-template = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
